--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.3.1",
+        "perfect-scrollbar": "^1.4.0",
         "sweetalert": "^2.1.0"
     }
 }
