--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.3.1",
-        "perfect-scrollbar": "^1.4.0",
-        "sweetalert": "^2.1.0"
+        "bootstrap-vue": "^2.0.0-rc.11",
+        "click-confirm": "^2.1.1",
+        "perfect-scrollbar": "^1.4.0"
     }
 }
