--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "laravelcollective/html": "^5.4.0",
         "spatie/laravel-permission": "^2.21",
         "uxweb/sweet-alert": "^2.0",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "barryvdh/laravel-debugbar": "^3.2"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
