--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
         "spatie/laravel-permission": "^2.21",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "barryvdh/laravel-debugbar": "^3.2"
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
